--- a/templates/ai/chat.html
+++ b/templates/ai/chat.html
@@ -1,1 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}{{ title }} - AI - VSTech Limited{% endblock %}
+{% block content %}
+<section class="">
+    <div class="container">
+        <h3 class="alert alert-info">Comming Soon</h3>
+    </div>
+</section>
+{% endblock %}
