--- a/templates/ai/desc_to_image.html
+++ b/templates/ai/desc_to_image.html
@@ -9,7 +9,7 @@
                     <!-- Contact Form -->
                     <div class="contact-form wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
                         <div class="title-box">
-                            <span class="sub-title">Generate Image</span>
+                            <span class="sub-title">Generate an Image</span>
                             <h3>Get Started!</h3>
                         </div>
                         {% if can_generate_image == 1 %}
@@ -24,7 +24,7 @@
                             </div>
                         </form>
                         {% else %}
-                            <p class="alert alert-warning">No attempt left, Purchase a product from <a href="{% url 'shop:list' %}">VSTech Shop</a> to get 20 more trials/attemps</p>
+                            <p class="alert alert-warning">No attempt left, Purchase a product from <a href="{% url 'shop:list' %}">VSTech Shop</a> to get 20 more trials/attemps <b class="fw-bold">OR</b> get free 7 days of use by referring a client to us.</p>
                         {% endif %}
                     </div>
                     <!--End Contact Form -->
@@ -33,7 +33,7 @@
             </div>
             <div class="col-lg-5">
                 <div class="col-lg-12">
-                    <p>View generated image ({{ request.user.trials.number }} attempt left)</p>
+                    <p>View generated image ({{ request.user.trials.number }} attempts left)</p>
                     <p>{% if content %}{{ content }}{% endif %}</p>
                 </div>
                 <div class="row g-3">
