--- a/templates/ai/chat.html
+++ b/templates/ai/chat.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}{{ title }} - AI - VSTech Limited{% endblock %}
+{% block meta %} 
+	<meta name="title" content="Enhance Customer Interactions with VS Tech's Advanced Chatbot">
+    <meta name="keywords" content="Chatbot, AI chatbot, customer interactions, VS Tech, artificial intelligence, customer support, automation, conversational AI">
+    <meta name="description" content="Enhance customer interactions and streamline support with VS Tech's advanced chatbot. Powered by artificial intelligence, our chatbot offers automated, conversational solutions for improved customer experiences.">
+{% endblock %}
 {% block content %}
 <section class="">
     <div class="container">
