--- a/templates/ai/desc_to_image.html
+++ b/templates/ai/desc_to_image.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}{{ title }} - AI - VSTech Limited{% endblock %}
+{% block meta %} 
+	<meta name="title" content="Revolutionary AI Image Generation: VS Tech's Latest Breakthrough">
+    <meta name="keywords" content="AI image generation, VS Tech, artificial intelligence, computer vision, e-commerce, gaming, design, advertising">
+    <meta name="description" content="Discover the groundbreaking AI image generation technology by VS Tech. Transforming textual descriptions into stunning visuals, this revolutionary system has the potential to reshape e-commerce, gaming, design, and advertising industries.">
+{% endblock %}
 {% block content %}
 <section class="">
     <div class="container">
