--- a/templates/newsletter/templates/blogs.html
+++ b/templates/newsletter/templates/blogs.html
@@ -154,7 +154,7 @@
                                                                                 <table align="center" border="0"
                                                                                     background="https://www.vstech.co.ke/static/images/main-slider/slider-4.jpeg"
                                                                                     cellpadding="0" cellspacing="0" class="display-width" width="100%"
-                                                                                    style="background-image: url(/static/images/main-slider/slider-4.jpeg); background-position: center center; background-repeat: no-repeat;"
+                                                                                    style="background-image: url(https://www.vstech.co.ke/static/images/main-slider/slider-4.jpeg); background-position: center center; background-repeat: no-repeat;"
                                                                                     data-bg="Header BG Image-1">
                                                                                     <tbody>
                                                                                         <tr>
