--- a/templates/newsletter/templates/products.html
+++ b/templates/newsletter/templates/products.html
@@ -140,7 +140,7 @@
                             <td data-background="header bg" data-bgcolor="header bg" align="center"
                                 background="https://www.vstech.co.ke/static/images/main-slider/slider-1.jpeg"
                                 bgcolor="#F6F6F6"
-                                style="background-size: cover; background-position: center center; background-image: url(&quot;/static/images/main-slider/slider-1.jpeg&quot;);">
+                                style="background-size: cover; background-position: center center; background-image: url(&quot;https://www.vstech.co.ke/static/images/main-slider/slider-1.jpeg&quot;);">
                                 <div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div>
                                 <table class="table-inner ui-resizable" width="600" style="max-width: 600px;"
                                     border="0" align="center" cellpadding="0" cellspacing="0">
