--- a/templates/assignments/base.html
+++ b/templates/assignments/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
     <meta name="author" content="Jeff Odhiambo">
 
-    <title>{% if title %}{{ title }} - {% endif %}Assignments - VSTech Limited</title>
+    <title>{% if title %}{{ title }} - {% endif %}GWD - VSTech Limited</title>
 
     {% include 'assignments/partials/css.html' %}
 
