--- a/templates/index/6.html
+++ b/templates/index/6.html
@@ -563,11 +563,11 @@
 													{{ testimony.author.profile.image.url }}
 												{% else %}
 													{% if testimony.author.profile.gender == 'male' %}
-														/static/images/1.png
+														/static/sb/img/undraw_profile_2.svg
 													{% elif testimony.author.profile.gender == 'female' %}
-														/static/images/2.png
+														/static/sb/img/undraw_profile_1.svg
 													{% else %}
-														/static/images/3.png
+														/static/sb/img/undraw_profile.svg
 													{% endif %}
 												{% endif %}" alt="{{ testimony.name }}" title="{{ testimony.name }}">
 											</div>
