--- a/templates/assignments/base.html
+++ b/templates/assignments/base.html
@@ -31,9 +31,20 @@
             <div id="content">
 
                 {% include 'assignments/partials/top-bar.html' %}
-
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
+                    {% if messages %}
+                        <div class="row justify-content-center">
+                            <div class="col-md-12">
+                                {% for message in messages %}
+                                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                                    {{ message }}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                     {% block content %}
                     
                     {% endblock %}
@@ -70,13 +81,14 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="">Logout</a>
+                    <a class="btn btn-primary" href="{% url 'account_logout' %}">Logout</a>
                 </div>
             </div>
         </div>
     </div>
-
-   {% include 'assignments/partials/js.html' %}
+    {% include 'assignments/partials/code_model.html' %}
+    {% include 'assignments/partials/place_an_order_model.html' %}
+    {% include 'assignments/partials/js.html' %}
 </body>
 
 </html>
