--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -5,10 +5,8 @@
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
     <div>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm"><i
-        class="fas fa-download fa-sm text-white-50"></i> Order Now</a>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-            class="fas fa-download fa-sm text-white-50"></i> Get Code</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm" data-toggle="modal" data-target="#placeAnOrder"><i class="fas fa-download fa-sm text-white-50"></i> Place an Order</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal" data-target="#getCode"><i class="fas fa-download fa-sm text-white-50"></i> Get Code</a>
     </div>
 </div>
 
@@ -98,13 +96,12 @@
         </div>
     </div>
 </div>
-
 <!-- Content Row -->
 
 <div class="row">
 
     <!-- Area Chart -->
-    <div class="col-xl-8 col-lg-7">
+    <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div
@@ -130,12 +127,31 @@
                 <div class="chart-area">
                     <canvas id="myAreaChart"></canvas>
                 </div>
+                <hr>
+                Styling for the bar chart can be found in the
+                <code>/js/demo/chart-bar-demo.js</code> file.
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+            </div>
+            <div class="card-body">
+                <div class="chart-bar"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                    <canvas id="myBarChart" width="399" height="320" style="display: block; width: 399px; height: 320px;" class="chartjs-render-monitor"></canvas>
+                </div>
+                <hr>
+                Styling for the bar chart can be found in the
+                <code>/js/demo/chart-bar-demo.js</code> file.
             </div>
         </div>
     </div>
 
     <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
+    <div class="col-xl-4 col-lg-4 col-md-6">
         <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div
@@ -172,6 +188,9 @@
                         <i class="fas fa-circle text-info"></i> Referral
                     </span>
                 </div>
+                <hr>
+                Styling for the bar chart can be found in the
+                <code>/js/demo/chart-bar-demo.js</code> file.
             </div>
         </div>
     </div>
