--- a/templates/assignments/partials/js.html
+++ b/templates/assignments/partials/js.html
@@ -1,4 +1,5 @@
- <!-- Bootstrap core JavaScript-->
+<script src="/static/js/bootstrap.min.js"></script>
+<!-- Bootstrap core JavaScript-->
  <script src="/static/sb/vendor/jquery/jquery.min.js"></script>
  <script src="/static/sb/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -14,3 +15,11 @@
  <!-- Page level custom scripts -->
  <script src="/static/sb/js/demo/chart-area-demo.js"></script>
  <script src="/static/sb/js/demo/chart-pie-demo.js"></script>
+ <script src="/static/sb/js/demo/chart-bar-demo.js"></script>
+
+<!-- Page level plugins -->
+<script src="/static/sb/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/static/sb/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="/static/sb/js/demo/datatables-demo.js"></script>
