--- a/templates/assignments/partials/sidebar.html
+++ b/templates/assignments/partials/sidebar.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'assignment:index' %}">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'gwd:index' %}">
         <div class="sidebar-brand-icon">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
         </div>
@@ -13,41 +13,32 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-        <a class="nav-link" href="{% url 'assignment:dashboard' %}">
+    <li class="nav-item {% if title == 'Dashboard' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'gwd:dashboard' %}">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
     </li>
 
-    <!-- Divider -->
     <hr class="sidebar-divider">
 
-    <!-- Heading -->
-    <!-- <div class="sidebar-heading">
-        Interface
-    </div> -->
+    <div class="sidebar-heading">
+        Others
+    </div>
 
-     <li class="nav-item">
-        <a class="nav-link" href="">
+     <li class="nav-item {% if title == 'Referals' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'gwd:referals' %}">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Referals</span></a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="#" data-target="#collapseTwo" aria-controls="collapseTwo">
+    <li class="nav-item {% if title == 'Orders' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'gwd:orders' %}">
             <i class="fas fa-fw fa-cog"></i>
             <span>Orders</span>
         </a>
-        <!-- <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Components:</h6>
-                <a class="collapse-item" href="buttons.html">Buttons</a>
-                <a class="collapse-item" href="cards.html">Cards</a>
-            </div>
-        </div> -->
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item {% if title == 'Earnings' or title == 'Withdrawals' %}active{% endif %}">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-wrench"></i>
@@ -57,8 +48,8 @@
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Transactions:</h6>
-                <a class="collapse-item" href="">Payments</a>
-                <a class="collapse-item" href="">Withdrawals</a>
+                <a class="collapse-item {% if title == 'Earnings' %}active{% endif %}" href="{% url 'gwd:earnings' %}">Earnings</a>
+                <a class="collapse-item {% if title == 'Withdrawals' %}active{% endif %}" href="{% url 'gwd:withdrawals' %}">Withdrawals</a>
             </div>
         </div>
     </li>
@@ -71,7 +62,6 @@
         Accounts
     </div>
 
-    <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
             aria-expanded="true" aria-controls="collapsePages">
@@ -80,14 +70,19 @@
         </a>
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Login Screens:</h6>
-                <a class="collapse-item" href="login.html">Login</a>
-                <a class="collapse-item" href="register.html">Register</a>
-                <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                {% if request.user.is_authenticated %}
+                <h6 class="collapse-header">Accounts:</h6>
+                <a class="collapse-item" href="{% url 'users:profile' %}">Profile</a>
+                <a class="collapse-item" href="{% url 'account_email' %}">Manage Emails</a>
+                <a class="collapse-item" href="{% url 'account_change_password' %}">Change Password</a>
+                <a class="collapse-item" href="{% url 'account_reset_password' %}">Reset Password</a>
+                <a class="collapse-item" href="{% url 'account_logout' %}">Logout</a>
                 <div class="collapse-divider"></div>
+                {% else %}
                 <h6 class="collapse-header">Other Pages:</h6>
-                <a class="collapse-item" href="404.html">404 Page</a>
-                <a class="collapse-item" href="blank.html">Blank Page</a>
+                <a class="collapse-item" href="{% url 'account_login' %}">Login</a>
+                <a class="collapse-item" href="{% url 'account_signup' %}">Register</a>
+                {% endif %}
             </div>
         </div>
     </li>
@@ -95,7 +90,6 @@
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
 
-    <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
     </div>
