--- a/templates/assignments/index.html
+++ b/templates/assignments/index.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between my-4">
         <p class="h1">Earn by refering a friend</p>
         <a href="{% url 'gwd:dashboard' %}" class="theme-btn btn-style-one">View Dashboard</a>
-        {% if not request.user.profile.code %}
+        {% if not request.user.profile.code and request.user.is_authenticated %}
             <a href="{% url 'gwd:get_code' request.user.id %}" class="theme-btn btn-style-one">Get Referal Code</a>
         {% endif %}
     </div>
