--- a/templates/assignments/index.html
+++ b/templates/assignments/index.html
@@ -27,7 +27,7 @@
                 <div class="inner-box">
                     <h5 class="title">Get Ideas on Your Project</h5>
                     <div class="d-flex">
-                        <a href="{% url 'gwd:place_an_order' %}" class="theme-btn btn-style-one">Get Started</a>
+                        <a href="{% url 'ai:get_ideas' %}" class="theme-btn btn-style-one">Get Started</a>
                     </div>
                 </div>
             </div>
