--- a/templates/assignments/orders.html
+++ b/templates/assignments/orders.html
@@ -147,5 +147,84 @@
                 </div>
             </div>
         </div>
+
+         <!-- Content Row -->
+         <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h6 class="m-0 font-weight-bold text-primary">Idea Requests</h6>
+                    <a href="{% url 'ai:get_ideas' %}" class="btn btn-sm btn-info">Get Ideas</a>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th><input type="checkbox" name="" id=""></th>
+                                <th>No</th>
+                                <th>Order ID</th>
+                                <th>Subject Area</th>
+                                <th>Level</th>
+                                <th>Payment Status</th>
+                                <th>No. of Ideas</th>
+                                <th>Amount</th>
+                                <th>Created At</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th><input type="checkbox" name="" id=""></th>
+                                <th>No</th>
+                                <th>Order ID</th>
+                                <th>Subject Area</th>
+                                <th>Level</th>
+                                <th>Payment Status</th>
+                                <th>No. of Ideas</th>
+                                <th>Amount</th>
+                                <th>Created At</th>
+                                <th>Action</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                            {% for idea_request in idea_requests %}
+                            <tr>
+                                <td><input type="checkbox" name="" id=""></td>
+                                <td class="text-danger fw-bold">{{ forloop.counter }}</td>
+                                <td>{{ idea_request.id }}</td>
+                                <td>{{ idea_request.area }}</td>
+                                <td>{{ idea_request.level }}</td>
+                                <td>
+                                    {% if idea_request.payment.is_paid %}
+                                        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Paid
+                                    {% else %}
+                                        <i class="fa fa-exclamation-circle text-warning"></i> Pending
+                                    {% endif %}
+                                </td>
+                                <td>{{ idea_request.number_of_ideas }}</td>
+                                <td class="text-end">Ksh. {{ idea_request.payment.amount }}</td>
+                                <td>{{ idea_request.created_at }}</td>
+                                <td class="text-end">
+                                    {% if idea_request.payment.is_paid %}
+                                    <a href="{% url 'gwd:request_detail' idea_request.id %}" class="btn btn-success btn-sm">
+                                       View
+                                    </a>
+                                    <a href="{% url 'gwd:request_delete' idea_request.id %}" class="btn btn-danger btn-sm">
+                                       Delete
+                                    </a>
+                                    {% else %}
+                                        <a href="{% url 'ai:make_payment' idea_request.payment.transaction_code %}" class="btn btn-primary btn-sm">
+                                            Make Payment
+                                        </a>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
