--- a/templates/assignments/partials/sidebar.html
+++ b/templates/assignments/partials/sidebar.html
@@ -34,7 +34,7 @@
     <li class="nav-item {% if title == 'Orders' %}active{% endif %}">
         <a class="nav-link" href="{% url 'gwd:orders' %}">
             <i class="fas fa-fw fa-cog"></i>
-            <span>Orders</span>
+            <span>Orders & Ideas</span>
         </a>
     </li>
 
